force-app/main/default/objects/Plan_Template__c.object
<CustomObject>
    <description>Represents a base template for a plan family which is used to build predefined or custom plans</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Family__c</fullName>
        <label>Plan Family</label>
        <referenceTo>Plan_Family__c</referenceTo>
        <relationshipLabel>Plan Templates</relationshipLabel>
        <relationshipName>Plan_Templates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Copay Deductible</fullName>
                </value>
                <value>
                    <fullName>HDHP</fullName>
                </value>
                <value>
                    <fullName>Copay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workspace</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Date__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Plan Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Termination_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>