force-app/main/default/objects/Plan_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Plan_Type__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Termination_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>